# auto-token

./: .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  pyproject.toml
.github/workflows/: coverage.yml  publish.yml  python-publish.yml  test.yml
auto_token/: __init__.py  __main__.py  utils.py
auto_token/model/: __init__.py  config.py  token.py
tests/: test_cli.py  test_e2e.py
