[project]
name = "auto-token"
dynamic = ["version"]
description = "auto manage token"
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "typer[all]>=0.9.0",
    "cachetools>=5.3.2",
    "toml>=0.10.2",
    "pydantic>=2.6.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
watch = ["watchfiles"]
all = ["auto-token[watch]"]

[project.scripts]
auto-token = "auto_token.__main__:app"

[tool.pdm.version]
source = "scm"
write_to = "auto_token/__version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "coverage",
]

[tool.pdm.build]
includes = ["auto_token"]

[tool.ruff]
line-length = 120
src = ["auto_token", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",
  "SIM",
  "UP",
  "FA",   # flake8-annotations
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "E",    # pycodestyle
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]

[tool.ruff.lint.isort]
known-first-party = ["auto_token"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[build-system]
requires = ["pdm-backend", "pdm-pyfuture"]
build-backend = "pdm.backend"
